Προσθήκη τελικού Jekyll setup με πραγματικό περιεχόμενο 5

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,8 @@
       <ul>
         {% for item in site.data.navigation %}
         <li>
-          <a href="{{ item.url }}" class="{% if page.url contains item.url %}active{% endif %}">
+          <a href="{{ item.url | relative_url }}"
+             class="{% if page.url == item.url or page.url == item.url | append: '/' %}active{% endif %}">
             {{ item.title }}
           </a>
         </li>
