Προσθήκη τελικού Jekyll setup με πραγματικό περιεχόμενο 7

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,10 +92,10 @@
       <ul>
         {% for item in site.data.navigation %}
         <li>
-          <a href="{{ site.baseurl }}{{ item.url }}" class="{% if page.url contains item.url %}active{% endif %}">
-            {{ item.title }}
-          </a>
-        </li>
+		<a href="{{ item.url | relative_url }}" class="{% if page.url == item.url %}active{% endif %}">
+        {{ item.title }}
+		</a>
+		</li>
         {% endfor %}
       </ul>
     </nav>
