Προσθήκη τελικού Jekyll setup με πραγματικό περιεχόμενο 8

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,8 +92,8 @@
       <ul>
         {% for item in site.data.navigation %}
         <li>
-		<a href="{{ item.url | relative_url }}" class="{% if page.url == item.url %}active{% endif %}">
-        {{ item.title }}
+		<a href="{{ item.url | relative_url }}" class="{% if page.url contains item.url %}active{% endif %}">
+		{{ item.title }}
 		</a>
 		</li>
         {% endfor %}
